deploy/home-root--dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-root-deployment
  labels:
    app: home-root
  namespace: home
spec:
  selector:
    matchLabels:
      app: home-root
  template:
    metadata:
      labels:
        app: home-root
    spec:
      containers:
      - name: home-root
        image: ticklethepanda/home-root:latest
        securityContext:
          runAsNonRoot: true
          runAsUser: 101
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
        volumeMounts:
        - mountPath: /tmp/
          name: nginx-temp
      volumes:
        - emptyDir: {}
          name: nginx-temp
