deploy/pihole--dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: pihole-etc-pv
              mountPath: "/etc/pihole"
            - name: pihole-dns-pv
              mountPath: "/etc/dnsmasq.d"
      volumes:
        - name: pihole-etc-pv
          persistentVolumeClaim:
            claimName: pihole-etc
        - name: pihole-dns-pv
          persistentVolumeClaim:
            claimName: pihole-dns
