deploy/speed-test--dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed-test-deployment
  labels:
    app: speed-test
  namespace: home
spec:
  selector:
    matchLabels:
      app: speed-test
  template:
    metadata:
      labels:
        app: speed-test
    spec:
      containers:
      - name: speed-test
        image: ticklethepanda/speed-tester:latest
        ports:
        - containerPort: 80
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
            add:
              - NET_BIND_SERVICE
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /data
          name: speed-test-volume
        - mountPath: /tmp
          name: tmp
        - mountPath: /.cache
          name: cache
      volumes:
        - name: speed-test-volume
          persistentVolumeClaim:
            claimName: speed-test-pvc
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: cache
