deploy/home-root--svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-root
  labels:
    name: home-root
  namespace: home
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 80
  selector:
    app: home-root
