deploy/timelapse--svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timelapse
  labels:
    name: timelapse
  namespace: home
spec:
  ports:
    # the port that this service should serve on
  - port: 80
    targetPort: 10000
  selector:
    app: timelapse
