deploy/1-home--ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: home-ingress
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/auth-type: "basic"
    traefik.ingress.kubernetes.io/auth-secret: "ingress-auth"
spec:
  tls:
    - secretName: home-ticklethepanda-co-uk
      hosts:
        - home.ticklethepanda.co.uk
  rules:
    - host: home.ticklethepanda.co.uk
      http:
        paths:
          - path: /speed-test
            pathType: Prefix
            backend:
              service:
                name: speed-test
                port:
                  number: 80
          - path: /timelapse
            pathType: Prefix
            backend:
              service:
                name: timelapse
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-root
                port:
                  number: 80
